--- a/sass/master.scss
+++ b/sass/master.scss
@@ -81,6 +81,47 @@ body {
     &.search-inline {
         margin-top: 20px;
         text-align: left;
+
+        button {
+            padding: 20px;
+        }
+    }
+}
+
+#results {
+    margin-top: 30px;
+    max-width: $max_results_width;
+
+    .result {
+        margin-bottom: 20px;
+        padding: 20px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.08), 0 1px 2px rgba(0,0,0,0.16);
+
+        .result-title, .result-description {
+            line-height: 1.4em;
+        }
+
+        .result-title {
+            margin-bottom: 15px;
+
+            a, img {
+                vertical-align: middle;
+            }
+
+            a {
+                color: $blue;
+            }
+        }
+
+        .result-description {
+            margin-bottom: 10px;
+        }
+
+        .result-url {
+            color: #16a085;
+        }
     }
 }
 
@@ -121,32 +162,29 @@ a {
             }
         }
 
+        input {
+            max-width: 500px;
+        }
+
         button {
             width: auto;
         }
 
-        input {
-            max-width: 300px;
-        }
-
         &.search-inline {
+            form {
+                display: flex;
+                max-width: $max_results_width;
+            }
+
             input, button {
                 display: inline-block;
-                vertical-align: middle;
                 margin: 0;
             }
 
             input {
                 margin-right: 10px;
+                max-width: none;
             }
-        }
-    }
-}
-
-@media (min-width: 900px) {
-    #search {
-        input {
-            max-width: 500px;
         }
     }
 }
