First iteration of the ranking system

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -134,6 +134,10 @@ body {
             a {
                 color: $blue;
             }
+
+            img {
+                max-height: 16px;
+            }
         }
 
         .result-description {
