--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -155,6 +155,37 @@ body {
     }
 }
 
+#pagination {
+    margin-top: 40px;
+
+    li {
+        display: inline-block;
+        background-color: #fff;
+
+        &.active {
+            background-color: $blue;
+            color: #fff;
+        }
+
+        &:first-child {
+            border-radius: 4px 0 0 4px;
+        }
+
+        &:last-child {
+            border-radius: 0 4px 4px 0;
+        }
+
+        a {
+            display: block;
+            padding: 15px;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+}
+
 #footer {
     display: flex;
     justify-content: space-between;
