--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -58,11 +58,11 @@ body {
         padding: 20px 30px;
         border: none;
         border-radius: 40px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.08), 0 1px 2px rgba(0,0,0,0.16);
-        transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
+        transition: box-shadow 0.3s cubic-bezier(.25, .8, .25, 1);
 
         &:focus {
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         }
     }
 
@@ -118,7 +118,7 @@ body {
         padding: 20px;
         background-color: #ffffff;
         border-radius: 10px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.08), 0 1px 2px rgba(0,0,0,0.16);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
 
         .result-title, .result-description {
             line-height: 1.4em;
@@ -156,15 +156,31 @@ body {
 }
 
 #pagination {
+    display: inline-block;
     margin-top: 40px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
+    border-radius: 4px;
 
     li {
         display: inline-block;
         background-color: #fff;
 
+        a, span {
+            display: block;
+            padding: 15px 20px;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+
         &.active {
             background-color: $blue;
             color: #fff;
+
+            &:hover {
+                background-color: $blue;
+            }
         }
 
         &:first-child {
@@ -175,13 +191,8 @@ body {
             border-radius: 0 4px 4px 0;
         }
 
-        a {
-            display: block;
-            padding: 15px;
-
-            &:hover {
-                text-decoration: none;
-            }
+        &:not(.disabled):hover {
+            background-color: #e3e3e3;
         }
     }
 }
