--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -111,8 +111,15 @@ body {
 }
 
 #results {
-    margin-top: 30px;
+    margin-top: 20px;
     max-width: $max_results_width;
+
+    .nb-results {
+        display: block;
+        margin-bottom: 20px;
+        margin-left: 30px;
+        color: #7c7c7c;
+    }
 
     .result {
         padding: 20px;
@@ -157,7 +164,7 @@ body {
 
 #pagination {
     display: inline-block;
-    margin-top: 40px;
+    margin-top: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
     border-radius: 4px;
 
