--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -168,17 +168,22 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
     border-radius: 4px;
 
+    ul {
+        margin: 0;
+    }
+
     li {
         display: inline-block;
         background-color: #fff;
+        list-style: none;
 
         a, span {
             display: block;
             padding: 15px 20px;
+        }
 
-            &:hover {
-                text-decoration: none;
-            }
+        a {
+            text-decoration: none;
         }
 
         &.active {
@@ -211,8 +216,21 @@ body {
     flex-shrink: 0;
     text-align: center;
 
+    ul {
+        margin: 0;
+    }
+
     li, a {
+        list-style: none;
         color: #828282;
+    }
+
+    a {
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -226,12 +244,20 @@ h2 {
     margin-bottom: 20px;
 }
 
-p {
+p, ul {
     margin-bottom: 20px;
     line-height: 1.4em;
 
     a {
         text-decoration: underline;
+    }
+}
+
+ul {
+    margin-left: 40px;
+
+    li {
+        list-style-type: disc;
     }
 }
 
