--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -31,6 +31,21 @@ body {
     margin-top: 50px;
 }
 
+.card {
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
+
+    *:last-child {
+        margin-bottom: 0;
+    }
+
+    &:not(:last-child) {
+        margin-bottom: 20px;
+    }
+}
+
 #logo {
     display: inline-block;
     margin-bottom: 40px;
@@ -218,6 +233,14 @@ body {
 
     ul {
         margin: 0;
+    }
+
+    li {
+        display: inline-block;
+
+        &:not(:last-child) {
+            margin-right: 10px;
+        }
     }
 
     li, a {
