--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -314,6 +314,10 @@ b {
     font-weight: bold;
 }
 
+.align-center {
+    text-align: center;
+}
+
 @media (min-width: 600px) {
     #wrapper {
         width: 70%;
