--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -19,6 +19,7 @@ body {
     background-color: #f2f2f2;
     color: $dark;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 
 #wrapper {
