--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -122,6 +122,7 @@ body {
         border-radius: 40px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
         transition: box-shadow 0.3s cubic-bezier(.25, .8, .25, 1);
+        -webkit-appearance: none;
 
         &:focus {
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
