--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -51,18 +51,18 @@ table {
 /* STYLING */
 
 html {
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-	box-sizing: inherit
+	box-sizing: inherit;
 }
 
 html,
 body {
-	height: 100%
+	height: 100%;
 }
 
 body {
@@ -71,39 +71,39 @@ body {
 	background-color: #f2f2f2;
 	color: #333;
 	font-family: 'Roboto', sans-serif;
-	scroll-behavior: smooth
+	scroll-behavior: smooth;
 }
 
 #wrapper {
 	width: 100%;
 	margin: 0 auto;
 	padding: 20px;
-	flex: 1 0 auto
+	flex: 1 0 auto;
 }
 
 .page {
-	margin-top: 50px
+	margin-top: 50px;
 }
 
 .card {
 	padding: 20px;
 	background-color: #ffffff;
 	border-radius: 10px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16)
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
 }
 
 .card *:last-child {
-	margin-bottom: 0
+	margin-bottom: 0;
 }
 
 .card.card-50,
 .card:not(:last-child) {
-	margin-bottom: 20px
+	margin-bottom: 20px;
 }
 
 .api-price {
 	padding: 0;
-	text-align: center
+	text-align: center;
 }
 
 .api-price h3 {
@@ -112,51 +112,51 @@ body {
 	border-radius: 10px 10px 0 0;
 	background-color: #f4f4f4;
 	font-weight: bold;
-	text-transform: uppercase
+	text-transform: uppercase;
 }
 
 .api-price.api-premium h3 {
 	background-color: #0680ff;
-	color: #ffffff
+	color: #ffffff;
 }
 
 .api-price ul {
 	margin: 0;
-	padding: 20px
+	padding: 20px;
 }
 
 .api-price ul li {
-	list-style: none
+	list-style: none;
 }
 
 .api-price ul li ul {
-	padding: 0
+	padding: 0;
 }
 
 .api-price .separator {
 	margin: 15px auto;
 	width: 80%;
 	height: 1px;
-	background-color: #e6e6e6
+	background-color: #e6e6e6;
 }
 
 .api-price .btn {
 	margin-top: 10px !important;
-	margin-bottom: 25px !important
+	margin-bottom: 25px !important;
 }
 
 #logo {
 	display: inline-block;
-	margin-bottom: 40px
+	margin-bottom: 40px;
 }
 
 #logo img {
-	height: 60px
+	height: 60px;
 }
 
 #search {
 	margin-top: 50px;
-	text-align: center
+	text-align: center;
 }
 
 #search input,
@@ -165,7 +165,7 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	font-family: inherit;
-	font-size: inherit
+	font-size: inherit;
 }
 
 #search input {
@@ -176,185 +176,190 @@ body {
 	border-radius: 40px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
 	transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-	-webkit-appearance: none
+	-webkit-appearance: none;
 }
 
 #search input:focus {
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #search.search-inline {
 	margin-top: 20px;
-	text-align: left
+	text-align: left;
 }
 
 #search.search-inline form {
-	display: flex
+	display: flex;
 }
 
 #search.search-inline input,
 #search.search-inline button {
 	display: inline-block;
-	margin: 0
+	margin: 0;
 }
 
 #search.search-inline input {
 	margin-right: 10px;
 	max-width: none;
-	width: 100%
+	width: 100%;
 }
 
 #search.search-inline button {
 	padding: 20px;
-	width: auto
+	width: auto;
 }
 
 #results {
 	margin-top: 20px;
-	max-width: 600px
+	max-width: 600px;
 }
 
 #results .nb-results {
 	display: block;
 	margin-bottom: 20px;
 	margin-left: 30px;
-	color: #7c7c7c
+	color: #7c7c7c;
 }
 
 #results .result {
 	padding: 20px;
 	background-color: #ffffff;
 	border-radius: 10px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16)
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
 }
 
 #results .result .result-title,
 #results .result .result-description {
-	line-height: 1.4em
+	line-height: 1.4em;
 }
 
 #results .result .result-title {
-	margin-bottom: 15px
+	margin-bottom: 15px;
 }
 
 #results .result .result-title a,
 #results .result .result-title img {
-	vertical-align: middle
+	vertical-align: middle;
 }
 
 #results .result .result-title a {
-	color: #0680ff
+	color: #0680ff;
 }
 
 #results .result .result-title img {
-	max-height: 16px
+	max-height: 16px;
 }
 
 #results .result .result-description {
-	margin-bottom: 10px
+	margin-bottom: 10px;
 }
 
 #results .result .result-url {
 	margin-bottom: 0;
-	color: #7c7c7c
+	color: #7c7c7c;
 }
 
 #results .result .result-url.secure {
-	color: #10ac84
+	color: #10ac84;
 }
 
 #results .result:not(:last-child) {
-	margin-bottom: 20px
+	margin-bottom: 20px;
 }
 
 #pagination {
 	display: inline-block;
 	margin-top: 20px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
-	border-radius: 4px
+	border-radius: 4px;
 }
 
 #pagination ul {
-	margin: 0
+	margin: 0;
 }
 
 #pagination li {
 	display: inline-block;
 	background-color: #ffffff;
-	list-style: none
+	list-style: none;
 }
 
 #pagination li a,
 #pagination li span {
 	display: block;
-	padding: 15px 20px
+	padding: 15px 20px;
 }
 
 #pagination li a {
-	text-decoration: none
+	text-decoration: none;
 }
 
 #pagination li.active {
 	background-color: #0680ff;
-	color: #ffffff
+	color: #ffffff;
 }
 
 #pagination li.active:hover {
-	background-color: #0680ff
+	background-color: #0680ff;
 }
 
 #pagination li:first-child {
-	border-radius: 4px 0 0 4px
+	border-radius: 4px 0 0 4px;
 }
 
 #pagination li:last-child {
-	border-radius: 0 4px 4px 0
+	border-radius: 0 4px 4px 0;
 }
 
 #pagination li:not(.disabled):hover {
-	background-color: #e3e3e3
+	background-color: #e3e3e3;
 }
 
 #footer {
 	display: flex;
 	justify-content: space-between;
-	padding: 20px;
 	flex-shrink: 0;
-	text-align: center
+	padding: 0 20px;
+	text-align: center;
+	background-color: #ededed;
+	border-top:  solid 1px #c7c7c7;
 }
 
 #footer ul {
-	margin: 0
+	margin: 0;
 }
 
 #footer li {
 	display: inline-block;
 	list-style: none;
-	color: #828282
+	color: #828282;
 }
 
 #footer li a {
 	display: block;
-	text-decoration: none
+	padding: 15px 20px;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
 }
 
 #footer li a:hover {
-	text-decoration: underline
+	background-color: #c7c7c7;
 }
 
-#footer li.featured {
+#footer li.featured {	
 	border-radius: 4px;
 	background: #0680ff;
 	color: #ffffff;
-	font-weight: bold
+	font-weight: bold;
 }
 
 #footer li.featured a {
-	padding: 2px 15px
+	padding: 2px 15px;
 }
 
 #footer li:not(:last-child) {
-	margin-right: 10px
+	margin-right: 10px;
 }
 
 .btn {
@@ -365,12 +370,12 @@ body {
 	color: #ffffff;
 	transition: background-color 0.3s;
 	border: none;
-	cursor: pointer
+	cursor: pointer;
 }
 
 .btn:hover {
 	text-decoration: none;
-	background-color: #0073ec
+	background-color: #0073ec;
 }
 
 h1,
@@ -378,105 +383,105 @@ h2,
 h3,
 p,
 ul {
-	margin-bottom: 20px
+	margin-bottom: 20px;
 }
 
 pre {
-	margin-bottom: 20px !important
+	margin-bottom: 20px !important;
 }
 
 h1 {
-	font-size: 36px
+	font-size: 36px;
 }
 
 h2 {
-	font-size: 24px
+	font-size: 24px;
 }
 
 h3 {
-	font-size: 18px
+	font-size: 18px;
 }
 
 p,
 ul {
-	line-height: 1.6em
+	line-height: 1.6em;
 }
 
 p a,
 ul a {
-	text-decoration: underline
+	text-decoration: underline;
 }
 
 p .fa-check,
 ul .fa-check {
-	color: #10ac84
+	color: #10ac84;
 }
 
 p .fa-times,
 ul .fa-times {
-	color: #ee5253
+	color: #ee5253;
 }
 
 ul {
 	margin-left: 40px;
-	margin-right: 40px
+	margin-right: 40px;
 }
 
 ul li {
-	list-style-type: disc
+	list-style-type: disc;
 }
 
 img {
 	max-width: 100%;
-	height: auto
+	height: auto;
 }
 
 a {
 	text-decoration: none;
-	color: inherit
+	color: inherit;
 }
 
 a:hover {
-	text-decoration: underline
+	text-decoration: underline;
 }
 
 b {
-	font-weight: bold
+	font-weight: bold;
 }
 
 svg {
-	margin-right: 5px
+	margin-right: 5px;
 }
 
 .align-center {
-	text-align: center
+	text-align: center;
 }
 
 @media (min-width: 600px) {
 	#wrapper {
-		width: 70%
+		width: 70%;
 	}
 	#logo img {
-		height: initial
+		height: initial;
 	}
 	#search {
-		margin-top: 100px
+		margin-top: 100px;
 	}
 	#search input {
-		max-width: 500px
+		max-width: 500px;
 	}
 	#search button {
-		width: auto
+		width: auto;
 	}
 	#search.search-inline form {
-		max-width: 600px
+		max-width: 600px;
 	}
 	.card:not(:last-child).card-50 {
-		margin-right: 40px
+		margin-right: 40px;
 	}
 	.card.card-50 {
 		display: inline-block;
 		vertical-align: top;
-		width: calc(50% - 20px)
+		width: calc(50% - 20px);
 	}
 }
