--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -205,7 +205,8 @@ body {
 }
 
 #search.search-inline button {
-	padding: 20px;
+	border-radius: 100%;
+	padding: 20px 21px;
 	width: auto;
 }
 
@@ -369,6 +370,7 @@ body {
 	background-color: #0680ff;
 	color: #ffffff;
 	transition: background-color 0.3s;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.16);
 	border: none;
 	cursor: pointer;
 }
